= Rake Changelog

== Pre-Version 0.9.x

* Allow single line comments immediately prior to a task to be used in
  place of +desc+.

* Split rake.rb into individual files.

* Support for the --where (-W) flag for showing where a task is defined.

* Fixed quoting in test task.
  (http://onestepback.org/redmine/issues/show/44)

* Fixed the silent option parsing problem.
  (http://onestepback.org/redmine/issues/show/47)

* Fixed :verbose=>false flag on sh and ruby commands.

* Rake command line options may be given by default in a RAKEOPT
  environment variable.

* Errors in Rake will now display the task invocation chain in effect
  at the time of the error.

== Version 0.8.7

* Fixed EXEEXT for JRuby on windows.

== Version 0.8.6

* Minor fixes to the RDoc generation (removed dependency on darkfish
  and removed inline source option).

== PreVersion 0.8.6

* Now allow # comments to comment a task definition.

== Version 0.8.5

* Better support for the system command on Windows.

== Version 0.8.4

* Preserve case when locating rakefiles (patch from James
  M. Lawrence/quix)

* Better support for windows paths in the test task (patch from Simon
  Chiang/bahuvrihi)

* Windows system dir search order is now: HOME, HOMEDRIVE + HOMEPATH,
  APPDATA, USERPROFILE (patch from Luis Lavena)

* MingGW is now recognized as a windows platform.  (patch from Luis
  Lavena)

* Numerous fixes to the windows test suite (patch from Luis Lavena).

* Improved Rakefile case insensitivity testing (patch from Luis
  Lavena).

* Fixed stray ARGV option problem that was interfering with
  Test::Unit::Runner.

* Fixed default verbose mode (was accidently changed to false).  

* Removed reference to manage_gem to fix the warning produced by the
  gem package task.

== Version 0.8.3

* Enhanced the system directory detection in windows. We now check
  HOMEDRIVE/HOMEPATH and USERPROFILE if APPDATA isn't found. (Patch
  supplied by James Tucker). Rake no long aborts if it can't find the
  directory.
